[package]
name = "wasabi"
version = "0.3.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2018"

[dev-dependencies]
test_utilities = { path = "lib/test_utilities" }

[dependencies]
wasm = { path = "lib/wasm" }

# for parallel instrumentation of functions
rayon = "1.0"

# for upgradable RW lock during instrumentation
parking_lot = "0.6.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"

# command-line interface and error handling
structopt = "0.3.2" # TODO update to clap v3 beta
enumset = "1.0.4"
main_error = "0.1.0"

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true
# For profiling with debug info.
debug = 1

# To speed-up test execution
[profile.test]
opt-level = 2
lto = "thin"