[workspace]
members = [
    "wasabi",
    "wasabi_wasm",
    "test_utilities",
]

[profile.release]
# Optimize all the things!
opt-level = 3
lto = "fat"
overflow-checks = true
# Some debug info for profiling.
debug = 1

[profile.test]
# Speed-up test execution and avoid stack overflow with deeply-nested ASTs.
opt-level = 2
lto = "thin"
