[package]
name = "test_utilities"
version = "0.0.1"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2021"

[dependencies]
walkdir = "2.3.2"
once_cell = "1.17.0"
icu = "1.0.0"
icu_testdata = "1.0.0"

# Only used for the "test commands" for validating/updating the valid-inputs list.
[dev-dependencies]
rayon = "1.6.1"
indicatif = { version = "0.17.2", features = ["rayon"] }
