[package]
name = "wasabi"
version = "0.3.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2021"

[dependencies]
wasabi_wasm = { path = "../wasabi_wasm" }

# For parallel instrumentation of functions.
rayon = "1.6.1"

# For upgradable RW lock during instrumentation.
parking_lot = "0.12.1"

smallvec = "1.10.0"
# For faster hash function in HashSet/HashMap.
nohash-hasher = "0.2.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_plain = "1.0.1"

# Command-line interface and error handling.
structopt = "0.3.26" # TODO update to clap v3 beta
enumset = "1.0.12"
main_error = "0.1.2"

[dev-dependencies]
test_utilities = { path = "../test_utilities" }
sha256 = "1.1.1"
sys-info = "0.9.1"