[package]
name = "wasabi_wasm"
version = "0.7.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2021"

[dependencies]
# For low-level WebAssembly parsing/encoding.
wasmparser = "0.96.0"
wasm-encoder = "0.20.0"

ordered-float = "3.4.0"

thiserror = "1.0.38"

rayon = "1.8.0"

serde = { version = "1.0.152", features = ["derive"] }

# For safe globally initialized data.
once_cell = "1.17.0"

# For faster hash function in HashSet/HashMap.
rustc-hash = "1.1.0"
nohash-hasher = "0.2.0"

smallvec = "1.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
# Change the global allocator. 
# Improves parallel parsing performance under Windows 10 enourmously, by >7x (!).
# Disable security features for additional performance.
mimalloc = { version = "0.1.32", default-features = false }

[dev-dependencies]
test_utilities = { path = "../test_utilities" }
bencher = "0.1.5"
criterion = "0.4.0"
dashmap = "5.4.0"

[[bench]]
name = "parser"
harness = false
