[package]
name = "wimpl"
version = "0.1.0"
edition = "2021"

[dependencies]
wasabi_wasm = { path = "../wasabi_wasm" }
lazy_static = "1.4.0"

# For interning function types and some strings.
arc-interner = "0.7.0"

# For parsing Wimpl text format
nom = "7.1.1"

# For faster HashSet and HashMap in callgraph analysis.
rustc-hash = "1.1.0"

# For hacky analysis of text formats
regex = "1.6.0"

# For easier error handling of executables.
anyhow = "1.0.65"

# For evaluation results collection.
csv = "1.1.6"

[dev-dependencies]
walkdir = "2.3.2"

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true
# For profiling with debug info.
debug = 1

[profile.test]
# Necessary to avoid stack overflow for very deeply nested tests.
opt-level = 2
lto = "thin"
