[package]
name = "leb128-bin"
version = "0.1.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2018"

[[bin]]
name = "leb128"
path = "src/main.rs"

[dependencies]
leb128 = { path = "../leb128" }
main_error = { path = "../main_error" }
structopt = "0.3.2"
hex = "0.4.0"

[profile.release]
lto = true
