# TODO rename to wasabi_leb128_bin, move into wasabi_leb128 repo

[package]
name = "leb128-bin"
version = "0.1.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2018"

[[bin]]
name = "leb128"
path = "src/main.rs"

[dependencies]
wasabi_leb128 = "0.4.0"
main_error = "0.1.0"
structopt = "0.3.11"
hex = "0.4.2"

[profile.release]
lto = true
