[package]
name = "wasabi_wasm"
version = "0.6.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2021"

[dependencies]
# For low-level WebAssembly parsing/encoding.
wasmparser = "0.91.0"
wasm-encoder = "0.17.0"

ordered-float = "3.1.0"

thiserror = "1.0.30"

rayon = "1.5.1"

serde = { version = "1", features = ["derive"] }

# For safe globally initialized data.
once_cell = "1.15.0"

# For faster hash function in HashSet/HashMap.
rustc-hash = "1.1.0"
nohash-hasher = "0.2.0"

[dev-dependencies]
test_utilities = { path = "../test_utilities" }
bencher = "0.1.5"
criterion = "0.4.0"
indicatif = { version = "0.17.1", features = ["rayon"] }
dashmap = "5.4.0"

[[bench]]
name = "parser"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true
# For profiling with debug info.
debug = 1

[profile.test]
# Necessary to avoid stack overflow for very deeply nested tests.
opt-level = 2
lto = "thin"
