[package]
name = "wasm"
# TODO bump
version = "0.5.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2018"

[dependencies]
# TODO remove those three once wasmparser lands
binary_derive = { path = "binary_derive" }
wasabi_leb128 = "0.4"
byteorder = "1"

# For low-level WebAssembly parsing/encoding
wasmparser = "0.91.0"
wasm-encoder = "0.17.0"

rayon = "1.5.1"
serde = { version = "1", features = ["derive"] }
ordered-float = "1"

# TODO remove those two once wimpl is moved out
lazy_static = "1.4.0"
csv = "1.1"

# For parsing Wimpl text format
# TODO remove
nom = "7.1.0"

thiserror = "1.0.30"
# TODO remove
anyhow = "1.0.55"

# TODO remove
# TODO move to dev-dependencies by moving imports into blocks of #[cfg(test)]
test_utilities = { path = "../test_utilities" }

# TODO remove
regex = "1.5.4"

# For interning function types and some strings.
internment = "0.6.0"
arc-interner = "0.7.0"

# TODO remove
# For faster HashSet and HashMap in callgraph analysis.
rustc-hash = "1.1.0"

# TODO remove
# For fast checking of function membership in set of indirectly callable functions.
# bloomfilter = "1.0.9"
# cuckoofilter = "0.5.0"

[dev-dependencies]
walkdir = "2.3.2"
bencher = "0.1.5"
criterion = "0.3"
indicatif = { version = "0.17.1", features = ["rayon"] }

[[bench]]
name = "parser"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true
# For profiling with debug info.
debug = 1

# Necessary to avoid stack overflow for very deeply nested tests.
[profile.test]
opt-level = 2
lto = "thin"
