[package]
name = "wasm"
# TODO bump
version = "0.5.0"
authors = ["Daniel Lehmann <mail@dlehmann.eu>"]
edition = "2021"

[dependencies]
# TODO remove those three once wasmparser lands
binary_derive = { path = "binary_derive" }
wasabi_leb128 = "0.4"
byteorder = "1"

# For low-level WebAssembly parsing/encoding
wasmparser = "0.91.0"
wasm-encoder = "0.17.0"

rayon = "1.5.1"
serde = { version = "1", features = ["derive"] }
ordered-float = "3.1.0"

thiserror = "1.0.30"

# For interning function types and some strings.
internment = "0.7.0"

[dev-dependencies]
test_utilities = { path = "../test_utilities" }
bencher = "0.1.5"
criterion = "0.4.0"
indicatif = { version = "0.17.1", features = ["rayon"] }

[[bench]]
name = "parser"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true
# For profiling with debug info.
debug = 1

[profile.test]
# Necessary to avoid stack overflow for very deeply nested tests.
opt-level = 2
lto = "thin"
