[package]
name = "wasabi-nodejs"
version = "0.2.0"
authors = ["yabeow <yabeow@protonmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "wasabi-nodejs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.2.0"
wasm = { path = "../../lib/wasm" }
wasabi = { path = "../../" }
